--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish GitHubPageTest/GitHubPageTest.csproj -c Release -o release --nologo
+      run: dotnet publish GitHubPageTest.csproj -c Release -o release --nologo
     
   # changes the base-tag in index.html from '/' to 'GitHubPageTest' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to GitHubPageTest
